[package]
name = "amf"
version = "0.1.0"
authors = ["Asad Mehmood <asad78611@googlemail.com>"]
edition = "2018"
license = "GPL-3.0-or-later"
description = "AMF [de]|serialization library"
repository = "https://github.com/mehmooda/amf/"
readme = "README.md"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom = "5.1.2"
serde = "1.0.114"
serde_bytes = "0.11.5"
chrono = "0.4.13"